[project]
name = "home-assistant-custom-integration-release-candidate"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501"]
